feat: document api
